<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTelaInicial"
        android:layout_width="321dp"
        android:layout_height="101dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_main_activity"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/textTelaInicial2"
        android:layout_width="274dp"
        android:layout_height="58dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/subtitle_main_activity"
        android:textAlignment="center"

        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelaInicial"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/buttonCadastroInicial"
        android:layout_width="266dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/button_main_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelaInicial2"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14dp"
        android:text="@string/text_main_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastroInicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textLoginInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_main_activity"
        android:textColor="@color/main_color"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03

"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastroInicial"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="89dp"
        app:layout_constraintBottom_toBottomOf="@+id/textTelaInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagem_inicio" />

</androidx.constraintlayout.widget.ConstraintLayout>